conserto de layout

--- a/WebContent/parts/footer.html
+++ b/WebContent/parts/footer.html
@@ -60,7 +60,7 @@
 				<hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto"
 					style="width: 60px;">
 				<p>Projeto Assistete de Predição a Evasão Universitária, por
-					Victoria Botelho Martins e Ederson Bastiani</p>
+					Victoria Botelho Martins, Ederson Bastiani e Renan Lírio de Souza</p>
 
 			</div>
 
@@ -72,14 +72,8 @@
 				<hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto"
 					style="width: 60px;">
 				<p>
-					<a class="dark-grey-text" href="#!">Instituto Federal
-						Farroupilha</a>
-				</p>
-				<p>
-					<a class="dark-grey-text" href="#!">Lattes</a>
-				</p>
-				<p>
-					<a class="dark-grey-text" href="#!">Linkedin</a>
+					<a class="dark-grey-text" href="https://www.iffarroupilha.edu.br/">Instituto
+						Federal Farroupilha</a>
 				</p>
 			</div>
 			<!-- Grid column -->
@@ -88,16 +82,17 @@
 			<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
 
 				<!-- Links -->
-				<h6 class="text-uppercase font-weight-bold">Contato</h6>
-				<hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto"
+				<h6 class="text-uppercase font-weight-bold">Contatos</h6>
+				<hr class="teal mb-4 mt-0 d-inline-block mx-auto"
 					style="width: 60px;">
-
 				<p>
-					<i class="fas fa-envelope mr-3"></i> victoriabotelho14@gmail.com
+					<a href="victoria.martins@aluno.iffar.edu.br">victoria.martins@aluno.iffar.edu.br</a>
 				</p>
 				<p>
-					<i class="fas fa-envelope mr-3"></i>
-					ederson.bastiani@iffaroupilha.edu.br
+					<a href="ederson.bastiani@iffaroupilha.edu.br">ederson.bastiani@iffaroupilha.edu.br</a>
+				</p>
+				<p>
+					<a href="renan.souza@iffaroupilha.edu.br">renan.souza@iffaroupilha.edu.br</a>
 				</p>
 			</div>
 			<!-- Grid column -->
